# ardshinScrapper

./: pyproject.toml
ardshinscrapper/ardshinBankRates/: scrapy.cfg
ardshinscrapper/ardshinBankRates/ardshinBankRates/: items.py  middlewares.py  pipelines.py  settings.py
ardshinscrapper/ardshinBankRates/ardshinBankRates/spiders/: rate.py
tests/: test_ardshinscrapper.py
