[tool.poetry]
name = "ardshinScrapper"
version = "0.1.0"
description = ""
authors = ["Arvin Nick <arvin.nick.90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
Scrapy = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0",
"django",
"scrapy"]
build-backend = "poetry.core.masonry.api"
